# STuneLite

./: LICENSE  README.md
OldCImplementation/: CMakeLists.txt  read_me.txt
OldCImplementation/.hg/: dirstate  hgrc  last-message.txt  undo.dirstate
OldCImplementation/.hg/cache/: branchheads  tags
OldCImplementation/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
OldCImplementation/.hg/store/data/_source/: _c_make_lists.txt.i  client.c.i  client.h.i  database__stuff.c.i  features.h.i  libplug__01.c.i  main.c.i  my__first__child.c.i  pcat__config.c.i  pcat__config.h.i  pcat__global__defs.h.i  pcat__map.c.i  pcat__map.h.i  pcat__process__interface.c.i  pcat__process__interface.h.i  pcat__types.h.i  plugin__stuff.c.i  prediction.c.i  simple__2d__discrete.c.i  spawn__stuff.c.i
OldCImplementation/Misc/: ellipse_math.gp  ellipse_picture01.graffle  pcat.tmproj
OldCImplementation/Misc/settingConstraintCutoffs_narrow.graffle/: data.plist  image1.tiff
OldCImplementation/Misc/settingConstraintCutoffs_narrow.graffle/QuickLook/: Thumbnail.tiff
OldCImplementation/Source/: CMakeLists.txt  client.c  client.h  database_stuff.c  features.h  libplug_01.c  main.c  my_first_child.c  pcat_client_api.h  pcat_config.c  pcat_config.h  pcat_global_defs.h  pcat_map.c  pcat_map.h  pcat_process_interface.c  pcat_process_interface.h  pcat_types.h  plugin_stuff.c  prediction.c  simple_2d_discrete.c  spawn_stuff.c
OldCImplementation/cmake/Modules/: FindGModule.cmake  FindLibYaml.cmake  FindSqlite3.cmake
OldJavaImplementation/: FromSingleSearch.java  README.txt  build.xml  defaultTuningKnobParameters.txt  expSettingsTemplate_TK  runTuningKnobSearch.sh  search_set_example.xml  spr_failures.txt  tuningKnobTestV1.xls  tuningKnobTestV2.xls
OldJavaImplementation/depcache/: dependencies.txt
OldJavaImplementation/poi-3.2-FINAL/: build.xml
OldJavaImplementation/src/: Add.java  Aggregate.java  Algebraic.java  (+72 more)
(+125 files in other folders)
